build/tmp/local/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {name}-service
  labels:
    app: {name}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: {name}
  type: ClusterIP
